[package]
name = "arp-spoof"
version = "0.1.0"
authors = ["Dale Sienkiewicz <DaleSienkiewicz@cock.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.26"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
